--- a/config/database.yml
+++ b/config/database.yml
@@ -7,8 +7,8 @@ default: &default
 
 development:
   <<: *default
-  database: postgres
-  host: postgres
+  database: exam
+  host: localhost
   port: 5432
   username: postgres
   password: postgres
@@ -16,8 +16,8 @@ development:
 
 test:
   <<: *default
-  database: postgres
-  host: postgres
+  database: exam_test
+  host: localhost
   port: 5432
   username: postgres
   password: postgres
