--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: exam
-    databaseName: exam
-    user: postgres
+  - name: bankapi
+    databaseName: bankapi
+    user: bankapi
 
 services:
   - type: web
-    name: bank-api
+    name: bankapi
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: bank-api
+          name: bankapi
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
